# mulle-todo

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  HOWTO.md  LICENSE  Makefile  README.md  RELEASENOTES.md  mulle-todo  mulle-todo.in  shell-integration.sh
.github/workflows/: release.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  footer.md.bud  install.md.bud  properties.plist  usage.md.bud
test/: README.md  run-all-tests.sh  test-basic.sh  test-edge-cases.sh  test-truncation.sh
